--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -75,11 +75,11 @@
 
    position: absolute;
 
-  left: 300px;
+  right: -20%;
 
    top: -10px;
 
-   pointer-events: none;
+   
 
 
 }
@@ -94,7 +94,7 @@
 
        top: -20%;
 
-       right: 20%;
+       right: 2%;
 
    }
 
@@ -108,7 +108,7 @@
 
        top: -25%;
 
-       margin-left: -60%;
+       right: 0;
 
        position: absolute;
 
@@ -117,6 +117,12 @@
    .container {
 
       padding: 0 1rem;
+
+   }
+
+   .nn {
+
+      overflow-x: hidden;
 
    }
 
