--- a/src/pages/Chatmee_Details/ChatmeeDetails.css
+++ b/src/pages/Chatmee_Details/ChatmeeDetails.css
@@ -117,15 +117,41 @@
 
 .tech_language h1 {
 
-  font-size: 2.6rem;
+  font-size: 3rem;
 
-  font-weight: 500;
+  font-weight: 600;
 
   color: white;
 
   margin-left: -30px;
 
+  font-family: 'outfit', sans-serif;
+
+  position: relative;
+
 }
+
+
+.tech_language h1::before {
+
+  content: '';
+
+  position: absolute;
+  
+  height: 5px;
+
+  width: 50%;
+
+  border-radius: 7px;
+
+  background: linear-gradient(45deg, rgb(170, 0, 255), transparent);
+
+  bottom: -25%;
+
+}
+
+
+
 
 .languages {
 
@@ -156,6 +182,8 @@
   transition: transform 0.3s ease;
 
   position: relative;
+
+  cursor: pointer;
 
 }
 
@@ -421,8 +449,6 @@
 
 
 
-
-
 .languages > div:hover {
 
   transform: translateY(-5px);
@@ -438,6 +464,9 @@
   font-size: 2.5rem;
 
   font-weight: 600;
+
+  font-family: 'outfit', sans-serif;
+
 }
 
 .languages p {
@@ -445,6 +474,10 @@
   color: #cccccc;
 
   margin-top: 20px;
+
+  font-size: 19.5px;
+
+  font-family: 'outfit', sans-serif;
 
 }
 
