--- a/src/pages/MassEnglish/MassEnglishDetails.css
+++ b/src/pages/MassEnglish/MassEnglishDetails.css
@@ -1,92 +1,163 @@
 :root {
-    --progress: 0%;
-  }
-  
-  .video-player-container {
-    background: #111;
-    padding: 20px;
-    border-radius: 12px;
-    max-width: 800px;
-    margin-top: 30px;
-    margin-left: 125px;
-    color: white;
-  }
-  
-  .video-element {
-    width: 100%;
-    border-radius: 12px;
-    margin-bottom: 10px;
-  }
-  
-  .controls {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  
-  .btn {
-    background: transparent;
-    border: none;
-    color: #fff;
-    padding: 8px 15px;
-    border-radius: 25px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: 0.3s;
-    font-size: 22px;
-    margin-bottom: 25px;
-  }
-  
 
+  --progress: 0%;
 
-  .fullScreen {
+}
 
-    font-size: 26px;
+.video-player-container {
 
-  }
-  
-  .time {
-    font-family: 'outfit', sans-serif;
-    min-width: 50px;
-    text-align: center;
-    font-size: 17px;
-  }
-  
-  .progress-bar {
-    flex: 1;
-    appearance: none;
-    height: 6px;
-    border-radius: 6px;
-    background: linear-gradient(
+  background: #111;
+
+  padding: 20px;
+
+  border-radius: 12px;
+
+  max-width: 800px;
+
+  margin-top: 30px;
+
+  margin-left: 125px;
+
+  color: white;
+
+}
+
+.video-element {
+
+  width: 100%;
+
+  border-radius: 12px;
+
+  margin-bottom: 10px;
+
+}
+
+.controls {
+
+  display: flex;
+
+  align-items: center;
+
+  gap: 10px;
+
+  flex-wrap: wrap;
+
+  margin-top: 25px;
+
+}
+
+.btnn {
+
+  background: transparent;
+
+  border: none;
+
+  color: #fff;
+
+  padding: 8px 15px;
+
+  border-radius: 25px;
+
+  cursor: pointer;
+
+  font-weight: bold;
+
+  transition: 0.3s;
+
+  font-size: 22px;
+
+  margin-bottom: 3px;
+
+}
+
+.btnn:hover {
+
+  background: #9500ff;
+
+}
+
+.fullScreen {
+
+  font-size: 26px;
+
+}
+
+.time {
+
+  font-family: 'outfit', sans-serif;
+
+  min-width: 50px;
+
+  text-align: center;
+
+  font-size: 17px;
+
+}
+
+.progress-bar {
+
+  flex: 1;
+
+  appearance: none;
+
+  height: 6px;
+
+  border-radius: 6px;
+
+  background: linear-gradient(
+
       to right,
+
       #00cec9 0%,
-      #00cec9 var(--progress),
+
+      rgb(255, 0, 135) var(--progress),
+
       #2d3436 var(--progress),
+
       #2d3436 100%
-    );
-    outline: none;
-    cursor: pointer;
-  }
-  
-  /* Custom thumb styling */
-  .progress-bar::-webkit-slider-thumb {
-    appearance: none;
-    height: 16px;
-    width: 16px;
-    background: #00cec9;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    margin-top: -2px;
-  }
-  
-  .progress-bar::-moz-range-thumb {
-    height: 16px;
-    width: 16px;
-    background: #00cec9;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
+
+  );
+
+  outline: none;
+
+  cursor: pointer;
+
+}
+
+/* Custom thumb styling */
+
+.progress-bar::-webkit-slider-thumb {
+
+  appearance: none;
+
+  height: 16px;
+
+  width: 16px;
+
+  background: #ff007b;
+
+  border-radius: 50%;
+
+  border: none;
+
+  cursor: pointer;
+
+  margin-top: -2px;
+
+}
+
+.progress-bar::-moz-range-thumb {
+
+  height: 16px;
+
+  width: 16px;
+
+  background: #00cec9;
+
+  border: none;
+
+  border-radius: 50%;
+
+  cursor: pointer;
+
+}
