--- a/src/components/Hero_Section/Hero.css
+++ b/src/components/Hero_Section/Hero.css
@@ -20,7 +20,10 @@
 
      z-index: 999;
 
+     position: relative;
+
  }
+
 
 
  .tag-box {
@@ -165,7 +168,7 @@
  
      font-weight: 500;
  
-     transition: 0.2s ease;
+     transition: 1s ease;
  
      border: 1px solid rgba(255,255,255,0.1);
  
@@ -189,6 +192,14 @@
  
      color: #fff;
  
+ }
+
+
+ .btn:active {
+
+    transform: scale(3);
+
+
  }
 
 
